Document PPDG/src/objects/IFMProxySession__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>IFMProxySessions</relationshipLabel>
        <relationshipName>IFMProxySessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalUser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ExternalUser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session_Reference__c</fullName>
        <label>Session Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>IFMProxySession</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>IFMProxySession Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IFMProxySessions</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>